# Projeto_Sistema_Operacional

./: CMakeLists.txt  config.h  cpu.c  cpu.h  isa.c  isa.h  main.c  memory.c  memory.h  register.c  register.h  relevant_documents.txt
